Add: CSS Setup , images, and color scheme

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Skilled</title>
   </head>
   <body>
+    <div class="container-lg"></div>
     <script src="/assets/js/app.js"></script>
   </body>
 </html>
