--- a/index.html
+++ b/index.html
@@ -8,7 +8,18 @@
     <title>Skilled</title>
   </head>
   <body>
-    <div class="container-lg"></div>
+    <div class="container-lg">
+      <header class="header mt-1">
+        <nav class="header__navigation">
+          <img
+            src="/assets/images/icons/skilled.svg"
+            alt="skilled logo"
+            draggable="false"
+          />
+          <button class="button button--default">Get Started</button>
+        </nav>
+      </header>
+    </div>
     <script src="/assets/js/app.js"></script>
   </body>
 </html>
